# cloudtaak_chessapp

chess-app/: .env  .gitignore  chess-app.sln  composer.json  docker-compose.yml  mqtt_test.php  package-lock.json  package.json
chess-app/GrpcService/: Dockerfile  GrpcService.csproj  Program.cs  Startup.cs
chess-app/GrpcService/Properties/: launchSettings.json
chess-app/GrpcService/Protos/: games.proto
chess-app/GrpcService/Services/: GameServiceImpl.cs
chess-app/RestAPI/: dockerfile  requirements.txt  winchance.py
chess-app/app/Models/: Game.php
chess-app/competition-service/: dockerfile  index.js  package-lock.json  package.json
chess-app/database/migrations/: 2025_01_07_115859_create_games_table.php  2025_01_07_153903_add_timestamps_to_games_table.php
chess-app/database/seeders/: DatabaseSeeder.php  GamesTableSeeder.php
chess-app/go-graphql-service/: dockerfile  go.mod  gqlgen.yml  main.go
chess-app/go-graphql-service/graph/: resolver.go  schema.graphqls  schema.resolvers.go
chess-app/mosquitto/config/: mosquitto.conf
chess-app/mosquitto/data/: mosquitto.db
chess-app/public/css/: styles.css
chess-app/resources/views/: buttons.blade.php  page1.blade.php  page2.blade.php  page3.blade.php  page4.blade.php  page5.blade.php  page6.blade.php
chess-app/routes/: web.php
chess-app/soap-adapter/: dockerfile
chess-app/soap-adapter/adaptor/: app.py  requirements.txt
chess-app/soap-service/: Dockerfile  composer.json  soap-server.php
chess-app/stockfishcontainer/: Cargo.toml  dockerfile
chess-app/stockfishcontainer/src/: main.rs
(+10 files in other folders)
