[package]
name = "stockfishcontainer"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "stockfishcontainer"
path = "src/main.rs"